Created a sequential backward selection module for feature selection. Created an L1 vs L2 regularization exposition, and demonstrated various properties of the two special cases of the Lp norm regularizers. Implemented random forest selection and did manual pca decomposition on the wine dataset.

--- a/Classifiers/k_Nearest_Neighbors/knn.ipynb
+++ b/Classifiers/k_Nearest_Neighbors/knn.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "62ca8d5e",
    "metadata": {},
    "outputs": [],
@@ -166,9 +166,7 @@
     "y = star_data['Spectral Class']\n",
     "X = star_data.select_dtypes(include='number')\n",
     "\n",
-    "sc = StandardScaler()\n",
-    "sc.fit(X)\n",
-    "X = sc.transform(X)\n",
+    "\n",
     "\n",
     "categorical_features = ['Star category', 'Star color']\n",
     "\n",
@@ -183,7 +181,11 @@
     "X = pd.concat([star_data.select_dtypes(include='number'), encoded_features], axis=1)\n",
     "\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42, stratify=y)\n",
+    "sc = StandardScaler()\n",
+    "sc.fit(X_train)\n",
+    "X_train = sc.transform(X_train)\n",
+    "X_test = sc.transform(X_test)"
    ]
   },
   {
