--- a/Applications/IMDB_Sentiment/sentiment_analysis.ipynb
+++ b/Applications/IMDB_Sentiment/sentiment_analysis.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "24acadd3",
+   "metadata": {},
+   "source": [
+    "This project dataset comes from https://ai.stanford.edu/~amaas/data/sentiment/\n",
+    "\n",
+    "\n",
+    "@InProceedings{maas-EtAl:2011:ACL-HLT2011,\n",
+    "  author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},\n",
+    "  title     = {Learning Word Vectors for Sentiment Analysis},\n",
+    "  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},\n",
+    "  month     = {June},\n",
+    "  year      = {2011},\n",
+    "  address   = {Portland, Oregon, USA},\n",
+    "  publisher = {Association for Computational Linguistics},\n",
+    "  pages     = {142--150},\n",
+    "  url       = {http://www.aclweb.org/anthology/P11-1015}\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "18b76c7e",
