Finished exposition on Random Forest regression, moving on to unsupervised clustering techniques. Explored K means and variants, silhouette scoring, hierarchical clustering schemes and linkages with an agglomerative clustering example, and concluded with DBSCAN for non-spherical clusters.

--- a/Classifiers/Ensembles/gradient_boosting.ipynb
+++ b/Classifiers/Ensembles/gradient_boosting.ipynb
@@ -8,7 +8,7 @@
     "Gradient boosting works in the following way:\n",
     "\n",
     "1) Start with a constant prediction (this is going to be a very weak prediction) - usually the average of all the classes in some sense. Call this prediction $F_0(x)$. For the case of binary classification, the inital constant prediction, will have the odds $\\hat{y} = \\log (\\# \\, 1 \\, labels  / \\# \\, 0 \\, labels )$ or $p = \\# \\, 1\\, labels / total \\, examples$.\n",
-    "2) Define a suitable loss function. In the case of regressors, this may be an MSE, and in the case of a classifier, it is the cross entropy (dynamic part of the K-L divergence). For classifiers, we have $$L(y_i, \\hat{y}_i) = \\sum_{j = 1}^c y_i \\log \\hat{y}_{i,j}.$$\n",
+    "2) Define a suitable loss function. In the case of regressors, this may be an MSE, and in the case of a classifier, it is the cross entropy (dynamic part of the K-L divergence). For classifiers, we have $$L(y_i, \\hat{y}_i) =- \\sum_{j = 1}^c y_i \\log \\hat{y}_{i,j}.$$\n",
     "3) We will train $M$ trees successively using the following steps:\n",
     "\n",
     "    a) For tree $m+1$ on the $i^{th}$ data point, we compute the pseudo-residual $r_{im} = - \\frac{\\partial L(y_i, F_{m}(x_i))}{\\partial F_m(x_i)}$, the direction to minimize the error on that data point.\n",
