--- a/Neural_Networks/MLP/MNIST_MLP.ipynb
+++ b/Neural_Networks/MLP/MNIST_MLP.ipynb
@@ -456,7 +456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "machinelearning",
+   "display_name": "dataexercises",
    "language": "python",
    "name": "python3"
   },
@@ -470,7 +470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
